codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn auto-compaction with a context override emits the context diff in the compact request while the incoming user message is still excluded.\",\n&[(\"Local Compaction Request\", &requests[2]),\n(\"Local Post-Compaction History Layout\", &requests[3]),])"
---
Scenario: Pre-turn auto-compaction with a context override emits the context diff in the compact request while the incoming user message is still excluded.

## Local Compaction Request
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <OPERATING_CONTRACT>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:USER_ONE
03:message/assistant:FIRST_REPLY
04:message/user:USER_TWO
05:message/assistant:SECOND_REPLY
06:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/user:USER_ONE
01:message/developer:# CONTEXT COMPACTION EVENT\n\nThe conversation history was compr...
02:message/user:USER_TWO
03:message/user:<COMPACTION_SUMMARY>\nPRE_TURN_SUMMARY
04:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <OPERATING_CONTRACT>
05:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
06:message/user[2]:
    [01] <input_image:detail,image_url>
    [02] USER_THREE
